infra/personal-assistence/web-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: personal-assistence
spec:
  selector:
    app: web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: personal-assistence
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
        - name: web-app
<<<<<<< HEAD
          image: ghcr.io/kaehm/personal-cluster/personal-assistence-web:sha-1d29455
=======
          image: ghcr.io/kaehm/personal-cluster/personal-assistence-web:1d29455
>>>>>>> b819dc1dcad8abdd56e0cf1db17c449788d9418a
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /auth
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /auth
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingress
  namespace: personal-assistence
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - personal-assistence.tail412374.ts.net
  rules:
    - host: personal-assistence.tail412374.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-app
                port:
                  number: 80
